ClientesControllerTest fixed